--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,6 +153,9 @@ input, select, textarea {
 			border-bottom-color: transparent;
 			color: #f2849e !important;
 		}
+		a:hover.umiami{
+			color: #148947 !important;
+		}
 
 	strong, b {
 		font-weight: 900;
@@ -210,6 +213,8 @@ input, select, textarea {
 	h2 {
 		font-size: 1.1em;
 	}
+
+	
 
 	h3 {
 		font-size: 1em;
@@ -2518,8 +2523,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			color: #f2849e !important;
-			box-shadow: inset 0 0 0 2px #f2849e;
+			color: #ff914d !important;
+			box-shadow: inset 0 0 0 2px #ff914d;
 		}
 
 		input[type="submit"]:active,
@@ -2556,12 +2561,14 @@ input, select, textarea {
 			color: #ffffff !important;
 		}
 
+		
+
 			input[type="submit"].primary:hover,
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #f2849e;
+				background-color: #000000;
 			}
 
 			input[type="submit"].primary:active,
@@ -2569,7 +2576,89 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #ee5f81;
+				background-color: #000000;
+			}
+
+			/* Secondary Color Button */
+
+			input[type="submit"].secondary,
+			input[type="reset"].secondary,
+			input[type="button"].secondary,
+			button.secondary,
+			.button.secondary {
+				box-shadow: none;
+				background-color: #ff914d;
+				color: #ffffff !important;
+			}
+
+			input[type="submit"].secondary:hover,
+			input[type="reset"].secondary:hover,
+			input[type="button"].secondary:hover,
+			button.secondary:hover,
+			.button.secondary:hover {
+				background-color: #DD6E0F;
+			}
+
+			input[type="submit"].secondary:active,
+			input[type="reset"].secondary:active,
+			input[type="button"].secondary:active,
+			button.seconday:active,
+			.button.secondary:active {
+				background-color: #DD6E0F;
+			}
+
+			/* Tertiary Color Button */
+			input[type="submit"].tertiary,
+			input[type="reset"].tertiary,
+			input[type="button"].tertiary,
+			button.tertiary,
+			.button.tertiary {
+				box-shadow: none;
+				background-color: #8c52ff;
+				color: #ffffff !important;
+			}
+
+			input[type="submit"].tertiary:hover,
+			input[type="reset"].tertiary:hover,
+			input[type="button"].tertiary:hover,
+			button.tertiary:hover,
+			.button.tertiary:hover {
+				background-color: #330066;
+			}
+
+			input[type="submit"].tertiary:active,
+			input[type="reset"].tertiary:active,
+			input[type="button"].tertiary:active,
+			button.tertiary:active,
+			.button.tertiary:active {
+				background-color: #330066;
+			}
+
+			/* Auxilliary Color Button */
+			input[type="submit"].auxilliary,
+			input[type="reset"].auxilliar,
+			input[type="button"].auxilliary,
+			button.auxilliary,
+			.button.auxilliary {
+				box-shadow: none;
+				background-color: #ff1616;
+				color: #ffffff !important;
+			}
+
+			input[type="submit"].auxilliary:hover,
+			input[type="reset"].auxilliary:hover,
+			input[type="button"].auxilliary:hover,
+			button.auxilliary:hover,
+			.button.auxilliary:hover {
+				background-color: #850101;
+			}
+
+			input[type="submit"].auxilliary:active,
+			input[type="reset"].auxilliary:active,
+			input[type="button"].auxilliary:active,
+			button.auxilliary:active,
+			.button.auxilliary:active {
+				background-color: #850101;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -3354,3 +3443,16 @@ input, select, textarea {
 			}
 
 		}
+
+/* About Us */
+.descriptor{
+	text-align: center;
+	font-size: x-large;
+	font-weight: bold;
+}
+
+.descriptor_sub{
+	text-align: center;
+	font-size: x-large;
+	
+}
