--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3451,12 +3451,12 @@ input, select, textarea {
 /* About Us */
 .descriptor{
 	text-align: center;
-	font-size: x-large;
+	font-size: large;
 	font-weight: bold;
 }
 
 .descriptor_sub{
 	text-align: center;
-	font-size: x-large;
+	font-size: large;
 	
 }
