--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -192,12 +192,20 @@ input, select, textarea {
 				margin: 0 0 1em 0;
 			}
 
+			h2.lower{
+				font-size: 1em;
+			}
+
 		}
 
 		@media screen and (max-width: 360px) {
 
 			h1 {
 				font-size: 1.75em;
+			}
+
+			h2.lower{
+				font-size: 1em;
 			}
 
 		}
@@ -216,6 +224,15 @@ input, select, textarea {
 
 	h2 {
 		font-size: 1.1em;
+	}
+
+	h2.lower{
+		font-size: 2.15em;
+		font-weight: 550;
+		line-height: 1.3;
+		margin: 0 0 1.5em 0;
+		letter-spacing: -0.035em;
+		text-transform: none;
 	}
 
 	
